first-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thegull-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thegull
  template:
    metadata:
      labels:
        app: thegull
    spec:
      serviceAccountName: deploy-sa
      containers:
        - name: thegull-container
          image: thegull:latest
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: data-volume
              mountPath: /mnt/data
      volumes:
        - name: data-volume
          hostPath:
            path: ${LOCAL_PATH}
