first-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thegull-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30000 # 사용 가능한 포트로 설정
  selector:
    app: thegull
